--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grattis Alva!</title>
-    <link rel="stylesheet" href="alva.css">
+    <link rel="stylesheet" href="klocka.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
@@ -35,6 +35,6 @@
           <div class="flip top-flip"></div>
         </div>
       </div>
-      <script src="alva.js"></script>
+      <script src="klocka.js"></script>
 </body>
 </html>
